# column_db

./: .gitignore  CMakeLists.txt  data.csv  output.columnar  schema.csv
script/: build.sh  convert.sh  run_query.sh  schema_cpp.csv  setup.sh
src/: CMakeLists.txt  columnar_db.hpp  main.cpp
src/columnar/: reader.cpp  reader.hpp  row_group.cpp  row_group.hpp  writer.cpp  writer.hpp
src/core/: schema.cpp  schema.hpp  types.hpp
src/csv/: parser.cpp  parser.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
src/exec/: aggregate.cpp  aggregate.hpp  batch.hpp  count_distinct.cpp  count_distinct.hpp  filter.cpp  filter.hpp  hash_aggregate.cpp  hash_aggregate.hpp  limit.cpp  limit.hpp  operator.hpp  result_writer.cpp  result_writer.hpp  scan.cpp  scan.hpp  sort.cpp  sort.hpp
src/query/: runner.cpp  runner.hpp
src/tools/: converter.cpp  converter.hpp  csv_compare.cpp  csv_compare.hpp
src/utils/: file_utils.cpp  file_utils.hpp
